@@ -3,7 +3,6 @@ package edu.ntnu.idatt2003.g23.model;
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import edu.ntnu.idatt2003.g23.model.transaction.calculator.SaleCalculator;
 
@@ -64,7 +63,7 @@ public class Portfolio {
         }
         return shares.stream()
                      .filter(share -> share.getStock().getSymbol().equals(symbol))
-                     .collect(Collectors.toList());
+                     .toList();
     }
 
     /**
